--- a/css/main.css
+++ b/css/main.css
@@ -2,29 +2,41 @@
     margin: 0;
     font-family: 'Roboto', sans-serif;
 }
-.btn-primary{
+
+.btn-primary {
+    width: 160px;
+    height: 64px;
+    background-color: #fff;
+    color: #005FAC;
+    border: 0;
+    font-size: 20px;
+    font-weight: 600;
+    border-radius: 5px;
 
 }
 
 
 /* header CSS  */
-.header{
+.header {
     background-image: url('../images/banner/banner3.png');
     min-height: 100vh;
 
 }
-.banner-container{
+
+.banner-container {
     text-align: right;
     margin-left: 845px;
     margin-right: 230px;
 }
-.banner-title{
+
+.banner-title {
     color: #FFFFFF;
     font-weight: 700;
     font-size: 65px;
     padding-top: 216px;
 }
-.banner-description{
+
+.banner-description {
     color: #FFFFFF;
     font-size: 16px;
     margin-top: 24px;
