--- a/css/main.css
+++ b/css/main.css
@@ -43,3 +43,31 @@
     margin-bottom: 32px;
 
 }
+
+/* failure section css  */
+
+.failure-section{
+    display: flex;
+    max-width: 1092px;
+    
+    margin: 0 auto;
+    align-items: center;
+    margin-top: 130px;
+}
+.section-title{
+    font-size: 40px;
+    font-weight: 700;
+    color: #151414;
+    margin-bottom: 24px;
+}
+.section-description{
+    color: #444343;
+    margin-bottom: 16px;
+}
+.section-points{
+    margin-bottom: 8px;
+    color: #444343;
+}
+.fa-solid{
+    color: rgb(41, 231, 41);
+}
