--- a/css/main.css
+++ b/css/main.css
@@ -84,7 +84,13 @@
     display: flex;
     justify-content: space-evenly;
 }
-
+.title{
+    font-weight: 700;
+    font-size: 40px;
+    color: #151414;
+    text-align: center;
+    margin-bottom: 50px;
+}
 .plans {
     display: flex;
     flex-direction: column;
@@ -109,4 +115,29 @@
     font-weight: 500;
     font-size: 25px;
     color: #737272;
+}
+
+/* positive section css  */
+
+.positive-section{
+    max-width: 1140px;
+    height: 300px;
+    margin: 0 auto;
+    background-image: url('../images/watch.png'), url('../images/gradient1.png');
+    background-repeat: no-repeat;
+    background-blend-mode: soft-light;
+    border-radius: 8px;
+    margin-bottom: 130px;
+}
+.positive-title{
+    padding-top: 60px;
+    font-weight: 700;
+    font-size: 40px;
+    color: #FFFFFF;
+    margin-bottom: 24px;
+    margin-left: 64px;
+    margin-right: 617px;
+}
+.btn-call{
+    margin-left: 64px;
 }
