--- a/css/main.css
+++ b/css/main.css
@@ -15,6 +15,10 @@
 
 }
 
+.blue-color {
+    color: #005FAC;
+}
+
 
 /* header CSS  */
 .header {
@@ -84,19 +88,21 @@
     display: flex;
     justify-content: space-evenly;
 }
-.title{
+
+.title {
     font-weight: 700;
     font-size: 40px;
     color: #151414;
     text-align: center;
     margin-bottom: 50px;
 }
+
 .plans {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    
+
 }
 
 .plan-image {
@@ -119,7 +125,7 @@
 
 /* positive section css  */
 
-.positive-section{
+.positive-section {
     max-width: 1140px;
     height: 300px;
     margin: 0 auto;
@@ -129,7 +135,8 @@
     border-radius: 8px;
     margin-bottom: 130px;
 }
-.positive-title{
+
+.positive-title {
     padding-top: 60px;
     font-weight: 700;
     font-size: 40px;
@@ -138,6 +145,54 @@
     margin-left: 64px;
     margin-right: 617px;
 }
-.btn-call{
+
+.btn-call {
     margin-left: 64px;
+}
+
+/* contact me section css  */
+
+.contact-section{
+    margin-bottom: 130px;
+}
+.contact-title {
+    font-weight: 700;
+    font-size: 30px;
+    color: #151414;
+    text-align: center;
+}
+
+.contact-me {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 100px;
+}
+
+.contact-left-side {
+    width: 40%;
+}
+
+.contact-left-side img {
+    width: 90%;
+}
+
+.contact-right-side {
+    width: 60%;
+}
+
+.contact {
+    width: 50%;
+    margin-left: 5%;
+    margin-right: 5%;
+    padding: 20px;
+    border-radius: 10px;
+
+    box-shadow: 10px 10px 40px gray;
+    text-align: justify;
+
+}
+
+.contact h4 {
+    margin-bottom: 25px;
+    padding: 10px;
 }
